--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,176 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: #777; }
+
+.heading__primary {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 6rem;
+  width: 100%;
+  cursor: pointer; }
+  .heading__primary--main {
+    font-family: 'Aclonica', sans-serif;
+    display: block;
+    font-size: 5rem;
+    font-weight: 500;
+    letter-spacing: 3.5rem;
+    text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746);
+    animation: moveInLeft 1s ease-out;
+    animation-fill-mode: backwards;
+    transition: all 0.5s ease-in; }
+    .heading__primary--main:hover {
+      transform: scale(1.1) translateY(-2rem); }
+  .heading__primary--sub {
+    font-family: 'Aclonica', sans-serif;
+    margin-top: 1rem;
+    display: block;
+    font-size: 2rem;
+    font-weight: 400;
+    letter-spacing: 1.35rem;
+    text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746);
+    animation: moveInRight 1s ease-out;
+    transition: all 0.5s ease-in; }
+    .heading__primary--sub:hover {
+      transform: scale(1.1) translateY(1rem); }
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(2rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-2rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  80% {
+    transform: translateY(-2rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+@keyframes FadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.5); }
+  80% {
+    transform: translateY(-2rem); }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+    transform: translate(0); } }
+
+.btn {
+  letter-spacing: 0.2rem;
+  font-family: 'Aclonica', sans-serif; }
+  .btn, .btn:link, .btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.5rem 2rem;
+    display: inline-block;
+    border-radius: 10rem;
+    transition: all .4s;
+    position: relative;
+    font-size: 1.8rem;
+    border: none;
+    cursor: pointer; }
+  .btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+    .btn:hover::after {
+      transform: scaleX(1.2) scaleY(1.4);
+      opacity: 0; }
+  .btn:active, .btn:focus {
+    outline: none;
+    transform: translateY(-1px);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+  .btn--white {
+    background-color: #fff;
+    color: #777; }
+    .btn--white::after {
+      background-color: #fff; }
+  .btn--green {
+    background-color: #55c57a;
+    color: #fff; }
+    .btn--green::after {
+      background-color: #55c57a; }
+  .btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 10rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s; }
+  .btn--animated {
+    animation: moveInBottom 1s ease-out 1s;
+    animation-fill-mode: backwards; }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.8rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px;
+  transition: all .4s; }
+
+.btn-text:hover {
+  background-color: #55c57a;
+  color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
+
+.header {
+  position: relative;
+  width: 100%;
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(71, 30, 30, 0.95), rgba(199, 189, 186, 0.75)), url(../../img/Background_img_header.jpg);
+  background-position: center;
+  background-size: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%); }
+  .header__logo-box {
+    position: absolute;
+    top: 2rem;
+    left: -3rem;
+    width: 25rem; }
+  .header__logo {
+    width: 100%;
+    height: 100%;
+    animation: FadeIn 1s ease-out 0.5s;
+    backface-visibility: none;
+    animation-fill-mode: backwards;
+    transition: all 0.5s ease-in; }
+    .header__logo:hover {
+      transform: scale(1.1); }
+  .header__text-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top: 45%;
+    text-align: center;
+    margin: auto;
+    width: 80%; }
