--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,13 @@
 
 @import './abstracts/variables';
+@import './abstracts/minxin';
 
 @import "./base/base";
 @import "./base/typography";
+@import "./base/animations";
 
-@import "./vendors/fonts.scss"
+@import "./components/button";
+
+@import "./vendors/fonts.scss";
+
+@import './layout/header';
