--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  box-sizing: border-box;
-  padding: 3rem; }
+  box-sizing: border-box; }
 
 body {
   font-family: "Lato", sans-serif;
@@ -31,7 +30,7 @@ body {
     display: block;
     font-size: 5rem;
     font-weight: 500;
-    letter-spacing: 3.5rem;
+    letter-spacing: 3rem;
     text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746);
     animation: moveInLeft 1s ease-out;
     animation-fill-mode: backwards;
@@ -94,7 +93,8 @@ body {
 
 .btn {
   letter-spacing: 0.2rem;
-  font-family: 'Aclonica', sans-serif; }
+  font-family: 'Aclonica', sans-serif;
+  text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746); }
   .btn, .btn:link, .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
@@ -103,7 +103,7 @@ body {
     border-radius: 10rem;
     transition: all .4s;
     position: relative;
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     border: none;
     cursor: pointer; }
   .btn:hover {
@@ -187,7 +187,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    top: 45%;
+    top: 50%;
     text-align: center;
     margin: auto;
     width: 80%; }
