--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,7 +1,7 @@
 .btn {
     letter-spacing: 0.2rem;
     font-family: 'Aclonica', sans-serif;
-    
+    text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746);
     &,
     &:link,
     &:visited {
@@ -12,27 +12,24 @@
         border-radius: 10rem;
         transition: all .4s;
         position: relative;
-        font-size: $default-font-size;
+        font-size: 1.3rem;
         border: none;
         cursor: pointer;
     }
     &:hover {
         transform: translateY(-3px);
         box-shadow: 0 1rem 2rem rgba($color-black,.2);
-
         &::after {
             transform: scaleX(1.2) scaleY(1.4);
             opacity: 0;
         }
     }
-    
     &:active,
     &:focus {
         outline: none;
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba($color-black,.2);
     }
-    
     &--white {
         background-color: $color-white;
         color: $color-grey-dark;
@@ -41,7 +38,6 @@
             background-color: $color-white;
         }
     }
-
     &--green {
         background-color: $color-primary;
         color: $color-white;
@@ -50,7 +46,6 @@
             background-color: $color-primary;
         }
     }
-    
     &::after {
         content: "";
         display: inline-block;
@@ -63,7 +58,6 @@
         z-index: -1;
         transition: all .4s;
     }
-    
     &--animated {
         animation: moveInBottom 1s ease-out 1s;
         animation-fill-mode: backwards;
@@ -71,7 +65,6 @@
 }
 
 .btn-text {
-
     &:link,
     &:visited {
         font-size: $default-font-size;
