--- a/sass/abstracts/_minxin.scss
+++ b/sass/abstracts/_minxin.scss
@@ -8,3 +8,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+@mixin scaleTransition {
+    transition: all 0.2s ease-in;
+    &:hover{
+            transform: scale(1.1);;
+    }
+}
