--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -30,3 +30,8 @@ $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
+
+// TIME
+$time-slow: 1s;
+$time-medium: 0.5s;
+$time-quick: 0.2s;
