--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -21,7 +21,7 @@ body {
         text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746);
         animation: moveInLeft 1s ease-out;
         animation-fill-mode: backwards;
-        transition: all 0.5s ease-in;
+        transition: all $time-quick ease-in;
         &:hover{
             transform: scale(1.1) translateY(-2rem);
         }
@@ -35,7 +35,7 @@ body {
         letter-spacing: 1.35rem;
         text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746);
         animation: moveInRight 1s ease-out;
-        transition: all 0.5s ease-in;
+        transition: all $time-quick ease-in;
         &:hover{
             transform: scale(1.1) translateY(1rem);
         }
