--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -21,10 +21,7 @@
         animation: FadeIn 1s ease-out 0.5s;
         backface-visibility: none;
         animation-fill-mode: backwards;
-        transition: all 0.5s ease-in;
-        &:hover{
-            transform: scale(1.1);;
-        }
+        @include scaleTransition;
     }
     &__text-box {
         @include absCenter;
