[Animation Set-up_1.0] Update Time Variables, synchronize header animation

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -19,7 +19,7 @@ body {
         font-weight: 500;
         letter-spacing: 3rem;
         text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746);
-        animation: moveInLeft 1s ease-out;
+        animation: moveInLeft $time-slow ease-out;
         animation-fill-mode: backwards;
         transition: all $time-quick ease-in;
         &:hover{
@@ -34,7 +34,7 @@ body {
         font-weight: 400;
         letter-spacing: 1.35rem;
         text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746);
-        animation: moveInRight 1s ease-out;
+        animation: moveInRight $time-slow ease-out;
         transition: all $time-quick ease-in;
         &:hover{
             transform: scale(1.1) translateY(1rem);
