--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,6 +2,8 @@
     letter-spacing: 0.2rem;
     font-family: 'Aclonica', sans-serif;
     text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746);
+
+
     &,
     &:link,
     &:visited {
@@ -16,36 +18,6 @@
         border: none;
         cursor: pointer;
     }
-    &:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 1rem 2rem rgba($color-black,.2);
-        &::after {
-            transform: scaleX(1.2) scaleY(1.4);
-            opacity: 0;
-        }
-    }
-    &:active,
-    &:focus {
-        outline: none;
-        transform: translateY(-1px);
-        box-shadow: 0 .5rem 1rem rgba($color-black,.2);
-    }
-    &--white {
-        background-color: $color-white;
-        color: $color-grey-dark;
-
-        &::after {
-            background-color: $color-white;
-        }
-    }
-    &--green {
-        background-color: $color-primary;
-        color: $color-white;
-
-        &::after {
-            background-color: $color-primary;
-        }
-    }
     &::after {
         content: "";
         display: inline-block;
@@ -58,8 +30,43 @@
         z-index: -1;
         transition: all .4s;
     }
+    &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 1rem 2rem rgba($color-black,.2);
+        &::after {
+            transform: scaleX(1.1) scaleY(1.2);
+            opacity: 0;
+        }
+    }
+
+    &:active,
+    &:focus {
+        outline: none; // note this default outline remover
+        transform: translateY(-1px);
+        box-shadow: 0 .5rem 1rem rgba($color-black,.2);
+    }
+
+    &--white {
+        background-color: $color-white;
+        color: $color-grey-dark;
+
+        &::after {
+            background-color: $color-white;
+        }
+    }
+
+    &--green {
+        background-color: $color-primary;
+        color: $color-white;
+
+        &::after {
+            background-color: $color-primary;
+        }
+    }
+
+    
     &--animated {
-        animation: moveInBottom 1s ease-out 0.5s;
+        animation: moveInBottom $time-slow ease-out 0.5s;
         animation-fill-mode: backwards;
     }
 }
