--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -18,7 +18,7 @@
     &__logo {
         width: 100%;
         height: 100%;
-        animation: FadeIn 1s ease-out 0.5s;
+        animation: FadeIn $time-slow ease-out 0.5s;
         backface-visibility: none;
         animation-fill-mode: backwards;
         @include scaleTransition;
