--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -14,7 +14,7 @@
         box-shadow: 0 1rem 3rem rgba($color-black, .1);
         text-align: center;
         cursor: pointer;
-        animation: FadeIn 1s ease-out 0.5s;
+        animation: FadeIn $time-slow ease-out 0.5s;
         backface-visibility: none;
         animation-fill-mode: backwards;
         @include scaleTransition;
