--- a/css/style.css
+++ b/css/style.css
@@ -231,3 +231,10 @@ body {
     top: -.8rem; }
   .navigation__icon::after {
     top: .8rem; }
+
+.section-about {
+  background-color: #f7f7f7;
+  height: 30vh;
+  padding: 25rem 0;
+  margin-top: -20vh;
+  border: lightskyblue dashed 2px; }
