--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Aclonica&display=swap");
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900);
 *,
 *::after,
@@ -50,6 +51,31 @@ body {
     .heading__primary--sub:hover {
       transform: scale(1.1) translateY(1rem); }
 
+.heading__secondary {
+  font-family: 'Aclonica', sans-serif;
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #471e1e, #c7bdba);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all 0.2s ease-in;
+  text-shadow: 2px 2px 8px 66, 62, 62, 0.65; }
+  .heading__secondary:hover {
+    transform: scale(1.1); }
+
+.heading-tertiary {
+  font-size: 1.8rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 1.8rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -91,10 +117,30 @@ body {
     transform: scale(1);
     transform: translate(0); } }
 
+.u-center-text {
+  text-align: center !important; }
+
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem !important; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem !important; }
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem !important; }
+
+.u-margin-top-big {
+  margin-top: 8rem !important; }
+
+.u-margin-top-huge {
+  margin-top: 10rem !important; }
+
 .btn {
   letter-spacing: 0.2rem;
   font-family: 'Aclonica', sans-serif;
-  text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746); }
+  text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746);
+  color: red;
+  z-index: 20000; }
   .btn, .btn:link, .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
@@ -143,22 +189,51 @@ body {
 
 .btn-text:link, .btn-text:visited {
   font-size: 1.8rem;
-  color: #55c57a;
+  color: #471e1e;
   display: inline-block;
   text-decoration: none;
-  border-bottom: 1px solid #55c57a;
-  padding: 3px;
+  border-bottom: 1px solid #471e1e;
+  padding: 0.3rem;
   transition: all .4s; }
 
 .btn-text:hover {
-  background-color: #55c57a;
+  background-color: #471e1e;
   color: #fff;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
-  transform: translateY(-2px); }
+  transform: translateY(-2px);
+  border-radius: 0.5rem;
+  padding: 0.5rem; }
 
 .btn-text:active {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(0); }
+
+.photo-composition {
+  position: relative; }
+  .photo-composition__photo {
+    width: 55%;
+    border-radius: 2px;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    position: absolute;
+    z-index: 10;
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .photo-composition__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .photo-composition__photo--p2 {
+      right: 0;
+      top: 2rem; }
+    .photo-composition__photo--p3 {
+      left: 20%;
+      top: 10rem; }
+    .photo-composition__photo:hover {
+      outline: 1rem solid #c7bdba;
+      transform: scale(1.05) translateY(-0.5rem);
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .photo-composition:hover .photo-composition__photo:not(:hover) {
+    transform: scale(0.95); }
 
 .header {
   position: relative;
@@ -232,9 +307,33 @@ body {
   .navigation__icon::after {
     top: .8rem; }
 
+.row {
+  max-width: 114rem;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 6rem) / 3); }
+  .row .col-2-of-3 {
+    width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 6rem) / 4); }
+  .row .col-2-of-4 {
+    width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
+  .row .col-3-of-4 {
+    width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
+
 .section-about {
   background-color: #f7f7f7;
-  height: 30vh;
-  padding: 25rem 0;
-  margin-top: -20vh;
-  border: lightskyblue dashed 2px; }
+  padding: 20rem 0;
+  margin-top: -13rem; }
