--- a/sass/abstracts/_minxin.scss
+++ b/sass/abstracts/_minxin.scss
@@ -15,3 +15,19 @@
             transform: scale(1.1);;
     }
 }
+
+@mixin clearfix {
+    &::after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+}
+
+@mixin box-shadow-hover-after {
+    box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
+}
+
+@mixin box-shadow-hover-before {
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
+}
