--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -41,3 +41,32 @@ body {
         }
     }
 }
+
+.heading__secondary{
+    font-family: 'Aclonica', sans-serif;
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: .2rem;
+    @include scaleTransition;
+    text-shadow: 2px 2px 8px (66, 62, 62, 0.65);
+
+}
+
+.heading-tertiary {
+    font-size: $default-font-size;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.paragraph {
+    font-size: $default-font-size;
+    
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
+}
