--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,8 +2,8 @@
     letter-spacing: 0.2rem;
     font-family: 'Aclonica', sans-serif;
     text-shadow: 2px 2px 8px rgba(179, 96, 96, 0.746);
-
-
+    color: red;
+    z-index: 20000;
     &,
     &:link,
     &:visited {
@@ -75,19 +75,21 @@
     &:link,
     &:visited {
         font-size: $default-font-size;
-        color: $color-primary;
+        color: $color-primary-light;
         display: inline-block;
         text-decoration: none;
-        border-bottom: 1px solid $color-primary;
-        padding: 3px;
+        border-bottom: 1px solid $color-primary-light;
+        padding: 0.3rem;
         transition: all .4s;
     }
 
     &:hover {
-        background-color: $color-primary;
+        background-color: $color-primary-light;
         color: $color-white;
         box-shadow: 0 1rem 2rem rgba($color-black, .15);
         transform: translateY(-2px);
+        border-radius: 0.5rem;
+        padding: 0.5rem;
     }
 
     &:active {
