--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,8 +5,12 @@
 @import "./base/base";
 @import "./base/typography";
 @import "./base/animations";
+@import "./base/utilities";
+
 
 @import "./components/button";
+@import "./components/photo-composition";
+
 
 
 @import "./vendors/fonts.scss";
