--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,4 +1,5 @@
 .section-about {
     background-color: $color-grey-light-1;
-    @include border;
+    padding: 20rem 0;
+    margin-top: -13rem;
 }
