--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Aclonica&display=swap");
+@import url(../../css/icon-font.css);
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900);
 *,
 *::after,
@@ -235,6 +236,24 @@ body {
   .photo-composition:hover .photo-composition__photo:not(:hover) {
     transform: scale(0.95); }
 
+.card--feature {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform .3s; }
+  .card--feature__icon {
+    font-size: 6rem;
+    margin-bottom: .5rem;
+    display: inline-block;
+    background-image: linear-gradient(to right, #471e1e, #c7bdba);
+    -webkit-background-clip: text;
+    color: transparent; }
+  .card--feature:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
+
 .header {
   position: relative;
   width: 100%;
@@ -337,3 +356,17 @@ body {
   background-color: #f7f7f7;
   padding: 20rem 0;
   margin-top: -13rem; }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 20rem 0;
+  margin-top: -13rem; }
+
+.section-features {
+  padding: 20rem 0 15rem 0;
+  background-image: linear-gradient(to right bottom, rgba(71, 30, 30, 0.8), rgba(199, 189, 186, 0.8)), url(../../img/Background_img_feature.jpg);
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -10rem; }
+  .section-features > * {
+    transform: skewY(7deg); }
