--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ body {
   position: relative;
   width: 100%;
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(71, 30, 30, 0.95), rgba(199, 189, 186, 0.75)), url(../../img/Background_img_header.jpg);
+  background-image: linear-gradient(to right bottom, rgba(71, 30, 30, 0.8), rgba(199, 189, 186, 0.8)), url("../../img/Background_img_header.jpg");
   background-position: center;
   background-size: cover;
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%); }
@@ -364,9 +364,9 @@ body {
 
 .section-features {
   padding: 20rem 0 15rem 0;
-  background-image: linear-gradient(to right bottom, rgba(71, 30, 30, 0.8), rgba(199, 189, 186, 0.8)), url(../../img/Background_img_feature.jpg);
+  background-image: linear-gradient(to right bottom, rgba(71, 30, 30, 0.8), rgba(199, 189, 186, 0.8)), url("../../img/Background_img_feature.jpg");
   background-size: cover;
-  transform: skewY(-7deg);
+  transform: skewY(-5deg);
   margin-top: -10rem; }
   .section-features > * {
-    transform: skewY(7deg); }
+    transform: skewY(5deg); }
