--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,10 +2,7 @@
     position: relative;
     width: 100%;
     height: 95vh;
-    background-image: linear-gradient(to right bottom,
-            rgba($color-primary-light, 0.95),
-            rgba($color-primary-dark, 0.75)),
-        url(../../img/Background_img_header.jpg);
+    @include background-img("../../img/Background_img_header.jpg");
     background-position: center;
     background-size: cover;
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
