--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -12,14 +12,11 @@
 
 .section-features {
     padding: 20rem 0 15rem 0;
-    background-image: linear-gradient(to right bottom,
-            rgba($color-primary-light, 0.8),
-            rgba($color-primary-dark, 0.8)),
-        url(../../img/Background_img_feature.jpg);
+    @include background-img("../../img/Background_img_feature.jpg");
     background-size: cover;
-    transform: skewY(-7deg);
+    transform: skewY(-5deg);
     margin-top: -10rem;
     &>* {
-        transform: skewY(7deg);
+        transform: skewY(5deg);
     }
 }
