--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -48,7 +48,7 @@ body {
     letter-spacing: .2rem;
     @include scaleTransition;
     text-shadow: 2px 2px 8px (66, 62, 62, 0.65);
-
+    cursor: pointer;
 }
 
 .heading-tertiary {
