--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -49,6 +49,9 @@ body {
     @include scaleTransition;
     text-shadow: 2px 2px 8px (66, 62, 62, 0.65);
     cursor: pointer;
+    &--light-mode{
+        background-image: linear-gradient(to right, rgb(32, 5, 5) 60%,rgb(240, 77, 77), );
+    }
 }
 
 .heading-tertiary {
