--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -21,3 +21,8 @@
     }
 }
 
+.section-tours {
+    background-color: $color-grey-light-2;
+    padding: 20rem 0 15rem 0;
+    margin-top: -10rem;
+}
