--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "./components/button";
 @import "./components/photo-composition";
 @import "./components/card";
+@import "./components/popup";
 
 
 
