--- a/sass/abstracts/_minxin.scss
+++ b/sass/abstracts/_minxin.scss
@@ -82,3 +82,8 @@
   transform: translate(-50%, -50%) scale(.25);
   transition: all .5s .2s;
 }
+
+@mixin bv-hidden {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
