--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,7 +16,7 @@
         width: 100%;
         height: 100%;
         animation: FadeIn $time-slow ease-out 0.5s;
-        backface-visibility: none;
+        @include bv-hidden;
         animation-fill-mode: backwards;
         @include scaleTransition;
     }
