--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,9 @@
 @import "./components/photo-composition";
 @import "./components/card";
 @import "./components/popup";
+@import "./components/story";
+@import "./components/bg-video";
+
 
 
 
