--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -23,6 +23,11 @@
 
 .section-tours {
     background-color: $color-grey-light-2;
-    padding: 20rem 0 15rem 0;
+    padding: 20rem 0 10rem 0;
     margin-top: -10rem;
+}
+
+.section-stories {
+    padding: 10rem 0;
+    position: relative;
 }
