--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,7 +5,7 @@ body {
     color: $color-grey-dark;
 }
 
-.heading__primary{
+.heading-primary{
     color: $color-white;
     text-transform: uppercase;
     @include bv-hidden;
@@ -36,7 +36,7 @@ body {
     }
 }
 
-.heading__secondary{
+.heading-secondary{
     font-family: 'Aclonica', sans-serif;
     font-size: 3.5rem;
     text-transform: uppercase;
