[Sec_Footer_1.0] Footer Basic Set-up

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -71,7 +71,7 @@
 }
 
 .btn-text {
-    &:link,
+    &:link,//which mean a have to have a ref
     &:visited {
         font-size: $default-font-size;
         color: $color-primary-light;
