--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -67,7 +67,7 @@
     &__radio-button {
         height: 3rem;
         width: 3rem;
-        border: 5px solid $color-primary;
+        border: 0.3rem solid rgba(192, 18, 18, 0.507);
         border-radius: 50%;
         display: inline-block;
         position: absolute;
@@ -84,7 +84,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: $color-primary;
+            background-color:  rgba(192, 18, 18, 0.507);
             opacity: 0;
             transition: opacity .2s;
         }
