--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,7 @@
 @import './layout/header';
 @import './layout/navigation';
 @import './layout/grid';
+@import './layout/footer';
 
 
 @import './pages/home'
