--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -30,6 +30,7 @@
         /* Note how this work , Nice New Property*/
         position: relative;
         height: 52rem;
+
         &__side {
             height: 52rem;
             transition: all .8s ease-in-out;
@@ -60,8 +61,8 @@
                 }
 
                 &-3 {
-                    background-color:red;
-                    background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+                    background-color: red;
+                    background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
                 }
             }
         }
